Airline System deployed

--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,5 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.airline_system.Airline_System</exec.mainClass>
     </properties>
+    <name>airline project</name>
 </project>
